[gd_scene load_steps=11 format=3 uid="uid://brewgxhcwxuiw"]

[ext_resource type="Script" path="res://Scripts/tienda.gd" id="1_m8wlm"]
[ext_resource type="Texture2D" uid="uid://coenipalidsgb" path="res://Sprites/piexelNegro.png" id="1_xvngi"]
[ext_resource type="FontFile" uid="uid://b6d4iwri5lpd5" path="res://FontNES.ttf" id="2_wwvr1"]
[ext_resource type="Texture2D" uid="uid://blu4qfunit3fs" path="res://Sprites/Final/vendedorIcono.png" id="3_kdnu2"]
[ext_resource type="Texture2D" uid="uid://cyynjm7d3kuu2" path="res://Sprites/Final/botonSeleccionado.png" id="5_e2bqv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_elymo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_phlp1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vce3t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xdlbo"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ck6b5"]
texture = ExtResource("5_e2bqv")

[node name="Tienda" type="Node2D"]
script = ExtResource("1_m8wlm")

[node name="TiendaUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1024.0
offset_bottom = 896.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="TiendaUI"]
layout_mode = 0
offset_top = 160.0
offset_right = 1024.0
offset_bottom = 896.0
texture = ExtResource("1_xvngi")

[node name="Icono" type="TextureRect" parent="TiendaUI"]
layout_mode = 0
offset_left = 74.0
offset_top = 352.0
offset_right = 114.0
offset_bottom = 392.0
scale = Vector2(4, 4)
texture = ExtResource("3_kdnu2")

[node name="CenterContainer" type="CenterContainer" parent="TiendaUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -304.0
offset_top = -249.0
offset_right = -158.0
offset_bottom = -127.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)

[node name="HBoxContainer" type="HBoxContainer" parent="TiendaUI/CenterContainer"]
layout_mode = 2
alignment = 1

[node name="botones" type="VBoxContainer" parent="TiendaUI/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="vidaBoton" type="Button" parent="TiendaUI/CenterContainer/HBoxContainer/botones"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_wwvr1")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_elymo")
theme_override_styles/hover = SubResource("StyleBoxEmpty_phlp1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vce3t")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_xdlbo")
theme_override_styles/focus = SubResource("StyleBoxTexture_ck6b5")
text = "HP UP"

[node name="danoBoton" type="Button" parent="TiendaUI/CenterContainer/HBoxContainer/botones"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_wwvr1")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_elymo")
theme_override_styles/hover = SubResource("StyleBoxEmpty_phlp1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vce3t")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_xdlbo")
theme_override_styles/focus = SubResource("StyleBoxTexture_ck6b5")
text = "DMG UP"

[node name="calaveraBoton" type="Button" parent="TiendaUI/CenterContainer/HBoxContainer/botones"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_wwvr1")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_elymo")
theme_override_styles/hover = SubResource("StyleBoxEmpty_phlp1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vce3t")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_xdlbo")
theme_override_styles/focus = SubResource("StyleBoxTexture_ck6b5")
text = "SKULLS UP"

[node name="tiempoBoton" type="Button" parent="TiendaUI/CenterContainer/HBoxContainer/botones"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_wwvr1")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_elymo")
theme_override_styles/hover = SubResource("StyleBoxEmpty_phlp1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vce3t")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_xdlbo")
theme_override_styles/focus = SubResource("StyleBoxTexture_ck6b5")
text = "% UP"

[node name="salirBoton" type="Button" parent="TiendaUI/CenterContainer/HBoxContainer/botones"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_wwvr1")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_elymo")
theme_override_styles/hover = SubResource("StyleBoxEmpty_phlp1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vce3t")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_xdlbo")
theme_override_styles/focus = SubResource("StyleBoxTexture_ck6b5")
text = "EXIT"

[node name="Precios" type="Node2D" parent="TiendaUI"]

[node name="precioVida" type="Label" parent="TiendaUI/Precios"]
offset_left = 847.0
offset_top = 349.0
offset_right = 943.0
offset_bottom = 388.0
theme_override_fonts/font = ExtResource("2_wwvr1")
theme_override_font_sizes/font_size = 32
text = "x15"

[node name="precioDano" type="Label" parent="TiendaUI/Precios"]
offset_left = 847.0
offset_top = 414.0
offset_right = 943.0
offset_bottom = 453.0
theme_override_fonts/font = ExtResource("2_wwvr1")
theme_override_font_sizes/font_size = 32
text = "x15"

[node name="precioCalavera" type="Label" parent="TiendaUI/Precios"]
offset_left = 847.0
offset_top = 479.0
offset_right = 943.0
offset_bottom = 518.0
theme_override_fonts/font = ExtResource("2_wwvr1")
theme_override_font_sizes/font_size = 32
text = "x15"

[node name="precioTiempo" type="Label" parent="TiendaUI/Precios"]
offset_left = 847.0
offset_top = 544.0
offset_right = 943.0
offset_bottom = 583.0
theme_override_fonts/font = ExtResource("2_wwvr1")
theme_override_font_sizes/font_size = 32
text = "x15"

[node name="Label" type="Label" parent="TiendaUI"]
layout_mode = 0
offset_left = 28.0
offset_top = 477.0
offset_right = 284.0
offset_bottom = 675.0
theme_override_fonts/font = ExtResource("2_wwvr1")
text = "Give me skulls
I give you power"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="TiendaUI/CenterContainer/HBoxContainer/botones/vidaBoton" to="." method="_on_vida_boton_pressed"]
[connection signal="pressed" from="TiendaUI/CenterContainer/HBoxContainer/botones/danoBoton" to="." method="_on_dano_boton_pressed"]
[connection signal="pressed" from="TiendaUI/CenterContainer/HBoxContainer/botones/calaveraBoton" to="." method="_on_calavera_boton_pressed"]
[connection signal="pressed" from="TiendaUI/CenterContainer/HBoxContainer/botones/tiempoBoton" to="." method="_on_tiempo_boton_pressed"]
[connection signal="pressed" from="TiendaUI/CenterContainer/HBoxContainer/botones/salirBoton" to="." method="_on_salir_boton_pressed"]
